--- a/css/header.css
+++ b/css/header.css
@@ -1,14 +1,28 @@
 /* --HEADER-- */
 header {
   width: 100%;
-  height: 50px;
-  display: none;
+  height: 100px;
+  display: flex;
+  position: fixed;
+  align-items: center;
+  justify-content: center;
 }
 #logo {
   height: 100%;
-  width: 100%;
+  width: 15%;
   font-size: 14px;
   display: flex;
+  color: #000;
   align-items: center;
   justify-content: center;
+}
+.navigation-bar {
+  width: 60%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  box-shadow: 10px 10px 36px 2px rgba(0, 0, 0, 0.1);
+  border-bottom-left-radius: 1em;
+  border-bottom-right-radius: 1em;
 }
